core/tests/errors/fail_let_destructure_type_check.rain
let main = fn() {
	x
}

let Integer = internal._get_type(0)

let {x: Integer} = {x = "6"}
